# diagram-sanitizer

./: .gitignore  AGENTS.md  README.md  SPEC.md  diagram.md  plan.md  pyproject.toml  tasks.md
src/ascii_sanitizer/: __init__.py  analyzer.py  cli.py  connectors.py  fixer.py  grid.py  report.py  types.py
src/diagram_sanitizer/: __init__.py  __main__.py  cli.py  components.py  connector_map.py  detectors.py  engine.py  fixer.py  grid.py  markdown.py  preprocessor.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_components.py  test_connector_map.py  test_connectors.py  test_detectors.py  test_engine.py  test_fixer.py  test_grid.py  test_markdown.py  test_preprocessor.py
