[project]
name = "diagram-sanitizer"
version = "1.0.0"
description = "Validate and auto-correct ASCII diagrams for structural integrity"
requires-python = ">=3.10"
keywords = ["ascii", "diagram", "sanitizer", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/davi/diagram-sanitizer"
Source = "https://github.com/davi/diagram-sanitizer"

[project.scripts]
das = "diagram_sanitizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_sanitizer"]
